--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
 
-        ul {
+        /* ul {
             margin: 0;
             padding: 0;
             list-style: none;
@@ -37,7 +37,23 @@
 
         .ghost {
             opacity: 0.4;
+        } */
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0
         }
+        li {
+            padding: 5px;
+            background: #eee
+        }
+        li.placeholder {background: rgb(255,240,120);}
+        li.placeholder:before {
+            content: "Drop here";
+            color: rgb(225,210,90);
+        }
+        
     </style>
     </head>
     <body>
